# PetAdvisor

./: .gitignore  Asistente de Mascotas.docx  README.md  documentation.txt  log.txt  main.py  pyproject.toml
static/: style.css
templates/: index.html  response.html
