
[tool.poetry]
name = "pet-care-assistant"
version = "0.1.0"
description = "A virtual assistant for pet care"
authors = ["Gabriel Romero <ing.gabriel.romero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.3"
openai = "^0.27.0"
langdetect = "^1.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
